# my-project-test

./: .cspell.json  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  helloworld(Markdown教程).md  package-lock.json  package.json
backend/: .env  app.js  package-lock.json  package.json  server.js  sync-database.js  sync-nodes-groups.js
backend/config/: auth.config.js  database.js  db.config.js
backend/controllers/: auth.controller.js  group.controller.js  node.controller.js  resource.controller.js  search.controller.js  stats.controller.js  system.controller.js  trapdoor.controller.js  user.controller.js
backend/controllers/core/: authorization.controller.js  edgeNode.controller.js  encapsulation.controller.js  group.controller.js  keyword.controller.js  matchVerify.controller.js  setup.controller.js
backend/lib/: crypto.js
backend/lib/crypto_engine/: binding.gyp  crypto_engine.cpp  crypto_engine.h  crypto_engine_impl.cpp  crypto_engine_impl.h  index.js  node-addon-api-path.txt  node_binding.cpp  package-lock.json  package.json
backend/lib/crypto_engine_js/: crypto_engine_impl.js  package-lock.json
backend/middleware/: auth.middleware.js
backend/models/: Document.js  Group.js  Node.js  NodeGroup.js  User.js  group.model.js  index.js  node.model.js  resource.model.js  search.model.js  system.model.js
backend/routes/: auth.js  auth.routes.js  document.routes.js  group.routes.js  node.routes.js  resource.routes.js  search.routes.js  stats.routes.js  system.routes.js  trapdoor.routes.js  user.routes.js
basic/: CMakeLists.txt  helloworld.md  miracl_example.cpp  scheme1.cpp
docs/api/: README.md
docs/examples/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: auth.js  authorization.js  document.js  group.js  http.js  match.js  metadata.js  node.js  resourceAllocation.js  search.js  system.js
frontend/src/components/: AppLayout.vue  CountdownTimer.vue  GroupManagerComponent.vue  NodeManagerComponent.vue  ResourceAllocationComponent.vue  SearchOperationComponent.vue  SystemSetupComponent.vue  SystemStatusCard.vue
frontend/src/layouts/: AuthChecker.vue  AuthLayout.vue
frontend/src/router/: index.js
frontend/src/store/: document.js  group.js  node.js  resourceAllocation.js  search.js  system.js  user.js
frontend/src/views/: EdgeDashboard.vue  GroupManager.vue  NodeManager.vue  ResourceAllocation.vue  SearchOperation.vue  TerminalDashboard.vue
frontend/src/views/auth/: Login.vue
frontend/src/views/core/: AuthorTest.vue  EdgeNodeReg.vue  GroupGen.vue  KeywordGen.vue  MatchVerify.vue  Setup.vue  TrapdoorGen.vue
libs/miracl/include/: mirdef.h
libs/miracl/lib/Release/: miracl.lib
src/: main.cpp  scheme1.cpp
src/tests/: CMakeLists.txt  miracl_tests.cpp
